--- a/.github/workflows/build-N-test.yml
+++ b/.github/workflows/build-N-test.yml
@@ -291,17 +291,16 @@ jobs:
         shell: "bash"
         # due to flaws in docker (windows must stop) - and cp no wildcards
         run: |
-          echo hi mom
-          pwd
-          docker images -q
-          docker ps -a
-          echo "got this far1"
           docker exec buildContainer df -h
           echo "got this far1.1"
           docker exec --workdir c:/Stroika buildContainer bash -c "echo in container"
           echo "got this far1.3"
           docker exec --workdir c:/Stroika buildContainer bash -c "pwd in container `pwd`"
           echo "got this far2"
+          docker exec --workdir c:/Stroika buildContainer bash -c 'mkdir TRACE_LOGS'
+          echo "got this far2.1x"
+          docker exec --workdir c:/Stroika buildContainer bash -c 'cp $TEMP/Trace*.txt TRACE_LOGS/'
+          echo "got this far2.2"
           docker exec --workdir c:/Stroika buildContainer bash -c 'mkdir TRACE_LOGS && cp $TEMP/Trace*.txt TRACE_LOGS/' || :
           docker stop buildContainer
           docker cp buildContainer:Stroika/Builds/${{ matrix.config_name }}/ $ARTIFACTS_DIR 2> /dev/null
