--- a/.github/workflows/build-N-test.yml
+++ b/.github/workflows/build-N-test.yml
@@ -291,19 +291,9 @@ jobs:
         shell: "bash"
         # due to flaws in docker (windows must stop) - and cp no wildcards
         run: |
-          docker exec buildContainer df -h
-          echo "got this far1.1"
-          docker exec --workdir c:/Stroika buildContainer bash -c "echo in container"
-          echo "got this far1.3"
-          docker exec --workdir c:/Stroika buildContainer bash -c "pwd in container `pwd`"
-          echo "got this far2"
-          docker exec --workdir c:/Stroika buildContainer bash -c 'mkdir TRACE_LOGS'
-          echo "got this far2.1x"
-          docker exec --workdir c:/Stroika buildContainer bash -c 'cp $TEMP/Trace*.txt TRACE_LOGS/'
-          echo "got this far2.2"
+          # @todo debug why combining mkdir and cp fails?
+          docker exec --workdir c:/Stroika buildContainer mkdir -p TRACE_LOGS
           docker exec --workdir c:/Stroika buildContainer bash -c 'cp $TEMP/Trace*.txt TRACE_LOGS/ || :'
-          echo "got this far2.3"
-          docker exec --workdir c:/Stroika buildContainer bash -c '(mkdir -p TRACE_LOGS && cp $TEMP/Trace*.txt TRACE_LOGS/) || :'
           docker stop buildContainer
           docker cp buildContainer:Stroika/Builds/${{ matrix.config_name }}/ $ARTIFACTS_DIR 2> /dev/null
           docker cp buildContainer:Stroika/TRACE_LOGS $ARTIFACTS_DIR 2> /dev/null
