--- a/.github/workflows/build-N-test.yml
+++ b/.github/workflows/build-N-test.yml
@@ -293,10 +293,15 @@ jobs:
         run: |
           # @todo debug why combining mkdir and cp fails?
           docker exec --workdir c:/Stroika buildContainer mkdir -p TRACE_LOGS
+          echo "Got here1"
           docker exec --workdir c:/Stroika buildContainer bash -c 'cp $TEMP/Trace*.txt TRACE_LOGS/ || :'
+          echo "Got here2"
           docker stop buildContainer
+          echo "Got here3"
           docker cp buildContainer:Stroika/Builds/${{ matrix.config_name }}/ $ARTIFACTS_DIR 2> /dev/null
+          echo "Got here4"
           docker cp buildContainer:Stroika/TRACE_LOGS $ARTIFACTS_DIR 2> /dev/null
+          echo "Got here5"
           rm -rf $ARTIFACTS_DIR/{ThirdPartyComponents,Tests,*.lib}
       - name: Archive Log Results
         if: always()
