--- a/.github/workflows/build-N-test.yml
+++ b/.github/workflows/build-N-test.yml
@@ -296,12 +296,20 @@ jobs:
           echo "Got here1"
           docker exec --workdir c:/Stroika buildContainer bash -c 'cp $TEMP/Trace*.txt TRACE_LOGS/ || :'
           echo "Got here2"
+
+          docker exec --workdir c:/Stroika buildContainer bash -c 'pwd'
+          echo "Got here3.1"
+          docker exec --workdir c:/Stroika buildContainer bash -c 'ls -l'
+          echo "Got here3.2"
+
           docker stop buildContainer
           echo "Got here3"
           # docker cp buildContainer:Stroika/Builds/${{ matrix.config_name }}/ $ARTIFACTS_DIR 2> /dev/null
           echo docker cp buildContainer:Stroika/Builds/${{ matrix.config_name }}/ $ARTIFACTS_DIR
           docker cp buildContainer:Stroika/Builds/${{ matrix.config_name }}/ $ARTIFACTS_DIR
           echo "Got here4"
+          docker cp buildContainer:c:/Stroika/TRACE_LOGS $ARTIFACTS_DIR 2> /dev/null
+          echo "Got here4.1"
           docker cp buildContainer:Stroika/TRACE_LOGS $ARTIFACTS_DIR 2> /dev/null
           echo "Got here5"
           rm -rf $ARTIFACTS_DIR/{ThirdPartyComponents,Tests,*.lib}
