--- a/.github/workflows/build-N-test.yml
+++ b/.github/workflows/build-N-test.yml
@@ -293,30 +293,21 @@ jobs:
         run: |
           # @todo debug why combining mkdir and cp fails?
           docker exec --workdir c:/Stroika buildContainer mkdir -p TRACE_LOGS
-          docker exec --workdir c:/Stroika buildContainer bash -c 'cp $TEMP/Trace*.txt TRACE_LOGS/ || :'
+          (docker exec --workdir c:/Stroika buildContainer bash -c 'mkdir -p TRACE_LOGS; cp $TEMP/Trace*.txt TRACE_LOGS/') || :
 
           # docker exec --workdir c:/Stroika buildContainer bash -c 'pwd'
-          # docker exec --workdir c:/Stroika buildContainer bash -c 'ls -l'
+          docker exec --workdir c:/Stroika buildContainer bash -c 'ls -l'
+          docker exec --workdir c:/Stroika buildContainer bash -c 'ls -l c:/Stroika/TRACE_LOGS/'
 
           docker stop buildContainer
           # echo "Got here3"
           # docker cp buildContainer:Stroika/Builds/${{ matrix.config_name }}/ $ARTIFACTS_DIR 2> /dev/null
           # echo docker cp buildContainer:Stroika/Builds/${{ matrix.config_name }}/ $ARTIFACTS_DIR
 
-          # (docker cp buildContainer:c:/Stroika/Builds/${{ matrix.config_name }}/ $ARTIFACTS_DIR) || :
-          # (docker cp buildContainer:c:/Stroika/ $ARTIFACTS_DIR) || :
-          # (docker cp buildContainer:c:\Stroika $ARTIFACTS_DIR) || :
-
-          echo "Got here3..3333"
-
-          echo docker cp "buildContainer:c:\\Stroika\\Builds\\${{ matrix.config_name }}\\" $ARTIFACTS_DIR
           (docker cp "buildContainer:c:\\Stroika\\Builds\\${{ matrix.config_name }}\\" $ARTIFACTS_DIR) || :
-          echo "Got here4"
+          (docker cp "buildContainer:c:/Stroika/TRACE_LOGS" $ARTIFACTS_DIR) || :
           (docker cp "buildContainer:c:\\Stroika\\TRACE_LOGS" $ARTIFACTS_DIR) || :
-          # (docker cp "buildContainer:c:\Stroika\TRACE_LOGS" $ARTIFACTS_DIR 2> /dev/null) || :
-          echo "Got here4.1"
-          # docker cp buildContainer:Stroika/TRACE_LOGS $ARTIFACTS_DIR 2> /dev/null
-          echo "Got here5"
+          (docker cp "buildContainer:c:\\Stroika\\TRACE_LOGS\\" $ARTIFACTS_DIR) || :
           rm -rf $ARTIFACTS_DIR/{ThirdPartyComponents,Tests,*.lib}
       - name: Archive Log Results
         if: always()
