--- a/.github/workflows/build-N-test.yml
+++ b/.github/workflows/build-N-test.yml
@@ -305,9 +305,13 @@ jobs:
           # echo docker cp buildContainer:Stroika/Builds/${{ matrix.config_name }}/ $ARTIFACTS_DIR
 
           (docker cp "buildContainer:c:\\Stroika\\Builds\\${{ matrix.config_name }}\\" $ARTIFACTS_DIR) || :
+          (docker cp "buildContainer:Stroika/Builds/${{ matrix.config_name }}" $ARTIFACTS_DIR) || :
           (docker cp "buildContainer:c:/Stroika/TRACE_LOGS" $ARTIFACTS_DIR) || :
+          (docker cp "buildContainer:Stroika/TRACE_LOGS" $ARTIFACTS_DIR) || :
           (docker cp "buildContainer:c:\\Stroika\\TRACE_LOGS" $ARTIFACTS_DIR) || :
           (docker cp "buildContainer:c:\\Stroika\\TRACE_LOGS\\" $ARTIFACTS_DIR) || :
+
+          ls -l $ARTIFACTS_DIR
           rm -rf $ARTIFACTS_DIR/{ThirdPartyComponents,Tests,*.lib}
       - name: Archive Log Results
         if: always()
