--- a/.github/workflows/build-N-test.yml
+++ b/.github/workflows/build-N-test.yml
@@ -291,16 +291,13 @@ jobs:
         shell: "bash"
         # due to flaws in docker (windows must stop) - and cp no wildcards
         run: |
-          # @todo debug why combining mkdir and cp fails?
-          docker exec --workdir c:/Stroika buildContainer mkdir -p TRACE_LOGS
           (docker exec --workdir c:/Stroika buildContainer bash -c 'mkdir -p TRACE_LOGS; cp $TEMP/Trace*.txt TRACE_LOGS/') || :
 
           # docker exec --workdir c:/Stroika buildContainer bash -c 'pwd'
-          docker exec --workdir c:/Stroika buildContainer bash -c 'ls -l'
-          docker exec --workdir c:/Stroika buildContainer bash -c 'ls -l c:/Stroika/TRACE_LOGS/'
+          docker exec --workdir c:/Stroika buildContainer bash -c 'echo ROOTWROKDIR ; ls -l'
+          docker exec --workdir c:/Stroika buildContainer bash -c 'echo TRACELOGS ; ls -l c:/Stroika/TRACE_LOGS/'
 
           docker stop buildContainer
-          # echo "Got here3"
           # docker cp buildContainer:Stroika/Builds/${{ matrix.config_name }}/ $ARTIFACTS_DIR 2> /dev/null
           # echo docker cp buildContainer:Stroika/Builds/${{ matrix.config_name }}/ $ARTIFACTS_DIR
 
